--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Avalon HTML Template</title>
+        <title>Primm Tabernacle African Methodist Episcopal Church</title>
 <!-- 
 Avalon Template 
 https://templatemo.com/tm-513-avalon
@@ -35,7 +35,7 @@ https://templatemo.com/tm-513-avalon
                         <div class="text-content">
                             <h6>There you go</h6>
                             <div class="line-dec"></div>
-                            <h1>Clean &amp; Minimal <br>Template</h1>
+                            <h1>Clean &amp; Minimal <br>Church</h1>
                             <div class="white-border-button">
                                 <a href="#" class="scroll-link" data-id="best-offer-section">Discover More</a>
                             </div>
