--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ https://templatemo.com/tm-513-avalon
                 <div class="col-md-8">
                     <div class="left-banner-content">
                         <div class="text-content">
-                            <h6>There you go</h6>
+                            <h6>May god bless you</h6>
                             <div class="line-dec"></div>
                             <h1>Primm Tabernacle African<br>Methodist Episcopal Church</h1>
                             <div class="white-border-button">
