--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ https://templatemo.com/tm-513-avalon
                 <div class="col-md-4">
                     <div class="right-banner-content">
                         <div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div>
-                        <h2>Avalon</h2>
-                        <span>Creative <em>HTML</em> Template</span>
+                        <h2>Follow us on social media</h2>
+                        <span>to get the <em>lates </em>news</span>
                         <div class="line-dec"></div>
                         <p>“ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et sem blandit, rhoncus ante a, varius libero. Cras elementum tincidunt ullamcorper. Sed vehic ula dictum tortor ut aliquet. ”</p>
                         <ul class="social-icons">
