--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ https://templatemo.com/tm-513-avalon
                     <div class="right-banner-content">
                         <div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div>
                         <h2>Follow us on social media</h2>
-                        <span>to get the <em>lates </em>news</span>
+                        <span>to get the<em>latest</em>news</span>
                         <div class="line-dec"></div>
-                        <p>“ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et sem blandit, rhoncus ante a, varius libero. Cras elementum tincidunt ullamcorper. Sed vehic ula dictum tortor ut aliquet. ”</p>
+                        <p>“ Church is not an organization you join; it is a family where you belong, a home where you are loved and a hospital where you find healing.”</p>
                         <ul class="social-icons">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
