--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@ https://templatemo.com/tm-513-avalon
                     <div id="owl-testimonial" class="owl-carousel owl-theme">
                         <div class="item col-md-12">
                             <img src="img/author_01.png" alt="Steven Walker">
-                            <span>Web Designer</span>
-                            <h4>Steven Walker</h4>
+                            <span>Owner</span>
+                            <h4>Phllip Ross</h4>
                             <br>
                             <p><em>"</em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cura bitur et sem blandit, rhoncus ante, varius libero. Cras elemen tum tincidunt ullamcorper sed vehic ula dictum.<em>"</em></p>
                         </div>
