--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ https://templatemo.com/tm-513-avalon
                         <div class="item col-md-12">
                             <img src="img/author_01.png" alt="Steven Walker">
                             <span>Owner</span>
-                            <h4>Phllip Ross</h4>
+                            <h4>Phllip Ros</h4>
                             <br>
                             <p><em>"</em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cura bitur et sem blandit, rhoncus ante, varius libero. Cras elemen tum tincidunt ullamcorper sed vehic ula dictum.<em>"</em></p>
                         </div>
