--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ https://templatemo.com/tm-513-avalon
                 <div class="col-md-4">
                     <div class="best-offer-left-content">
                         <div class="icon"><img src="img/best-offer-icon.png" alt=""></div>
-                        <h4>Best Offer For You</h4>
+                        <h4>Contact us</h4>
                     </div>
                 </div>
                 <div class="col-md-8">
