--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-513-avalon
                         <h2>Follow us on social media</h2>
                         <span>to get the<em> latest </em> news</span>
                         <div class="line-dec"></div>
-                        <p>“ Church is not an organization you join; it is a family where you belong, a home where you are loved and a hospital where you find healing-Nicky Gumbel”</p>
+                        <p>“ To be a light to the community, metting the needs of the young and old. Commited to serve, teach, minister and empower the people through the nurturing of the Holy Spirit”</p>
                         <ul class="social-icons">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
