--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@ https://templatemo.com/tm-513-avalon
                 <div class="col-md-4">
                     <div class="best-offer-left-content">
                         <div class="icon"><img src="img/best-offer-icon.png" alt=""></div>
-                        <h4>About uus</h4>
+                        <h4>About us</h4>
                     </div>
                 </div>
                 <div class="col-md-8">
                     <div class="best-offer-right-content">
                         <div class="row">
                             <div class="col-md-6 col-sm-12">
-                                <h2><br><em>Avalon Theme</em></h2>
+                                <h2>Our goal<br><em>our message</em></h2>
                                 <p>Avalon Theme is a full-width modern HTML template for everyone. Please tell your friends about <a href="https://fb.com/templatemo" target="_parent">TemplateMo</a>. Thank you. You are allowed <strong>to use this template</strong> for your business. 
                                 <br><br>You have <strong>no permission</strong> to re-distribute this template as a downloadable ZIP file on any website. If you see this on any website, that means an illegal copy. Please contact us if you have any question.</p>
                                 <ul>
