--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-513-avalon
                         <h2>Follow us on social media</h2>
                         <span>to get the<em> latest </em> news</span>
                         <div class="line-dec"></div>
-                        <p>“ To be a light to the community, metting the needs of the young and old. Commited to serve, teach, minister and empower the people through the nurturing of the Holy Spirit”</p>
+                        <p> </p>
                         <ul class="social-icons">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -76,8 +76,8 @@ https://templatemo.com/tm-513-avalon
                     <div class="best-offer-right-content">
                         <div class="row">
                             <div class="col-md-6 col-sm-12">
-                                <h2>Our goal<br><em>our message</em></h2>
-                                <p>Avalon Theme is a full-width modern HTML template for everyone. Please tell your friends about <a href="https://fb.com/templatemo" target="_parent">TemplateMo</a>. Thank you. You are allowed <strong>to use this template</strong> for your business. 
+                                <h2>About us<br><em>our goal</em></h2>
+                                <p>To be a light to the community, metting the needs of the young and old. Commited to serve, teach, minister and empower the people through the nurturing of the Holy Spirit</a>. Thank you. You are allowed <strong>to use this template</strong> for your business. 
                                 <br><br>You have <strong>no permission</strong> to re-distribute this template as a downloadable ZIP file on any website. If you see this on any website, that means an illegal copy. Please contact us if you have any question.</p>
                                 <ul>
                                     <li>+ Aenean eget ex faucibus, tempor nibh vel.</li>
