--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ https://templatemo.com/tm-513-avalon
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/fontAwesome.css">
@@ -77,8 +76,7 @@ https://templatemo.com/tm-513-avalon
                         <div class="row">
                             <div class="col-md-6 col-sm-12">
                                 <h2>About us<br><em>our goal</em></h2>
-                                <p>To be a light to the community, metting the needs of the young and old. Commited to serve, teach, minister and empower the people through the nurturing of the Holy Spirit</a>. Thank you. You are allowed <strong>to use this template</strong> for your business. 
-                                <br><br>You have <strong>no permission</strong> to re-distribute this template as a downloadable ZIP file on any website. If you see this on any website, that means an illegal copy. Please contact us if you have any question.</p>
+                                <p>To be a light to the community, metting the needs of the young and old. Commited to serve, teach, minister and empower the people through the nurturing of the Holy Spirit</a>.</p>
                                 <ul>
                                     <li>+ Aenean eget ex faucibus, tempor nibh vel.</li>
                                     <li>+ Bibendum tortor. Suspendisse a diam viverra.</li>
