--- a/index.html
+++ b/index.html
@@ -75,14 +75,9 @@ https://templatemo.com/tm-513-avalon
                     <div class="best-offer-right-content">
                         <div class="row">
                             <div class="col-md-6 col-sm-12">
-                                <h2>About us<br><em>our goal</em></h2>
+                                <h2>About us<br></h2>
                                 <p>To be a light to the community, metting the needs of the young and old. Commited to serve, teach, minister and empower the people through the nurturing of the Holy Spirit</a>.</p>
-                                <ul>
-                                    <li>+ Aenean eget ex faucibus, tempor nibh vel.</li>
-                                    <li>+ Bibendum tortor. Suspendisse a diam viverra.</li>
-                                    <li>+ Finibus ipsum et, imperdiet felis.</li>
-                                    <li>+ Donec laoreet efficitur ultrices sit amet enim.</li>
-                                </ul>
+                                <p>Primm Tabernacle African Methodist Episcopal Church was organized as a mission church on November 5, 1961, by Pastor Edward N. Smith Jr. Primm was incorporated on January 5, 1966. Pastor Smith's goal was that church would serve the residents of the Holly Park housing projects and the Beacon Hill Area of Seattle.</p>
                                 <div class="pink-button">
                                     <a href="#" class="scroll-link" data-id="events-section">Discover More</a>
                                 </div>
