--- a/index.html
+++ b/index.html
@@ -81,30 +81,8 @@ https://templatemo.com/tm-513-avalon
                                 <div class="pink-button">
                                     <a href="#" class="scroll-link" data-id="events-section">Discover More</a>
                                 </div>
-                            </div>
-                            <div class="col-md-6 col-sm-12">
-                                <img src="img/best-offer-image.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="events" id="events-section">
-        <div class="content-wrapper">
-            <div class="inner-container container-fluid">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                        <div class="section-heading">
-                            <div class="filter-categories">
-                                <ul class="project-filter">
-                                    <li class="filter" data-filter="all"><span>Show All</span></li>
-                                    <li class="filter" data-filter="design"><span>Design Meeting</span></li>
-                                    <li class="filter" data-filter="start"><span>App Start Up</span></li>
-                                    <li class="filter" data-filter="web"><span>Web Conferences</span></li>
-                                </ul>
+			    <h2> Every Sunday at 10am </h2>
+			    <p> Find us at 4455 South Brandon Street, Seattle WA 98118</p>
                             </div>
                         </div>
                     </div>
