--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ https://templatemo.com/tm-513-avalon
                         <p> </p>
                         <ul class="social-icons">
                             <li><a href="https://www.facebook.com/profile.php?id=100009079471122"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href=""><i class="fa fa-youtube"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.youtube.com/channel/UCqSWPwu_N1ABi5BlGuZDs7w"><i class="fa fa-youtube"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                             
                         </ul>
                     </div>
