--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-513-avalon
                         <h2>Follow us on social media</h2>
                         <span>to get the<em> latest </em> news</span>
                         <div class="line-dec"></div>
-                        <p> </p>
+                        <p> To be a light to the community, metting the needs of the young and old. Commited to serve, teach, minister and empower the people through the nurturing of the Holy Spirit</p>
                         <ul class="social-icons">
                             <li><a href="https://www.facebook.com/profile.php?id=100009079471122"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://www.youtube.com/channel/UCqSWPwu_N1ABi5BlGuZDs7w"><i class="fa fa-youtube"></i></a></li>
@@ -75,7 +75,7 @@ https://templatemo.com/tm-513-avalon
                         <div class="row">
                             <div class="col-md-6 col-sm-12">
                                 <h2>About us<br></h2>
-                                <p>To be a light to the community, metting the needs of the young and old. Commited to serve, teach, minister and empower the people through the nurturing of the Holy Spirit</a>.</p>
+                                
                                 <p>Primm Tabernacle African Methodist Episcopal Church was organized as a mission church on November 5, 1961, by Pastor Edward N. Smith Jr. Primm was incorporated on January 5, 1966. Pastor Smith's goal was that church would serve the residents of the Holly Park housing projects and the Beacon Hill Area of Seattle.</p>
                                 
 			    <h2> Every Sunday at 10am </h2>
