--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-513-avalon
                         <h2>Follow us on social media</h2>
                         <span>to get the<em> latest </em> news</span>
                         <div class="line-dec"></div>
-                        <p> To be a light to the community, metting the needs of the young and old. Commited to serve, teach, minister and empower the people through the nurturing of the Holy Spirit</p>
+                        <p> "To be a light to the community, metting the needs of the young and old. Commited to serve, teach, minister and empower the people through the nurturing of the Holy Spirit"</p>
                         <ul class="social-icons">
                             <li><a href="https://www.facebook.com/profile.php?id=100009079471122"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://www.youtube.com/channel/UCqSWPwu_N1ABi5BlGuZDs7w"><i class="fa fa-youtube"></i></a></li>
