--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ https://templatemo.com/tm-513-avalon
                             <span>Owner</span>
                             <h4>Phllip Ross</h4>
                             <br>
-                            <p><em>"</em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cura bitur et sem blandit, rhoncus ante, varius libero. Cras elemen tum tincidunt ullamcorper sed vehic ula dictum.<em>"</em></p>
+                            <p><em>"</em>One Spirit... Lifting Him Up!"</em></p>
                         </div>
                         <div class="item col-md-12">
                             <img src="img/author_02.png" alt="Johnny Smith">
